[project]
name = "cambodian-phonenumber"
version = "0.1.2"
description = "Parse, validate, format, and extract Cambodian phone numbers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["cambodia", "phone", "number", "validation", "carrier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/daneth0708/cambodian-phonenumber"
Repository = "https://github.com/daneth0708/cambodian-phonenumber"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
